welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:6: error: '(' expected but identifier found.
  	if estSurBiscuit()=true
           ^Poucet:15: error: 'while' expected but '}' found.
	}
        ^