welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var sortie=false
var biscuit=0

do {
	for (i <- 1 to 5){
  	if estSurBiscuit()=true
    	biscuit=biscuit+1
  	

  
  
  }  
}